<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sign_in_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_app_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_icon"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/img_app_logo_large"/>

    <TextView
        android:id="@+id/text_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_username"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/hint_login"
        android:inputType="textPersonName"
        android:textColorHint="@color/dark_red"/>


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_username"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/dark_red"/>

    <Button
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/sign_in"/>

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/edit_username"
        android:layout_alignBottom="@id/edit_password"
        android:visibility="invisible"/>


</RelativeLayout>
